--- a/src/Abstractions/src/AspectCore.Core/AspectCore.Core.csproj
+++ b/src/Abstractions/src/AspectCore.Core/AspectCore.Core.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="AspectCore.Abstractions" Version="0.2.0-preview1" />
     <PackageReference Include="AspectCore.Extensions.Reflection" Version="0.2.0-preview1" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.3.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
