--- a/src/Abstractions/src/AspectCore.Abstractions/AspectCore.Abstractions.csproj
+++ b/src/Abstractions/src/AspectCore.Abstractions/AspectCore.Abstractions.csproj
@@ -16,5 +16,9 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
     <PackageReference Include="System.ComponentModel" Version="4.3.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.3.0" />
+  </ItemGroup>
   
 </Project>
