--- a/src/Abstractions/performance/AspectCore.Benchmark/AspectCore.Benchmark.csproj
+++ b/src/Abstractions/performance/AspectCore.Benchmark/AspectCore.Benchmark.csproj
@@ -2,7 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.10.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\AspectCore.Abstractions\AspectCore.Abstractions.csproj" />
+    <ProjectReference Include="..\..\src\AspectCore.Core\AspectCore.Core.csproj" />
+  </ItemGroup>
 
 </Project>
