--- a/src/Abstractions/performance/AspectCore.Benchmark/AspectCore.Benchmark.csproj
+++ b/src/Abstractions/performance/AspectCore.Benchmark/AspectCore.Benchmark.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.10.8" />
+    <PackageReference Include="Castle.Core" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
