--- a/src/Abstractions/src/AspectCore.Abstractions/AspectCore.Abstractions.csproj
+++ b/src/Abstractions/src/AspectCore.Abstractions/AspectCore.Abstractions.csproj
@@ -24,5 +24,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Reflection\src\AspectCore.Extensions.Reflection\AspectCore.Extensions.Reflection.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
   
 </Project>
