--- a/src/Core/test/AspectCore.Tests/AspectCore.Tests.csproj
+++ b/src/Core/test/AspectCore.Tests/AspectCore.Tests.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\src\AspectCore.Core\AspectCore.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DynamicProxy\" />
+  </ItemGroup>
+
 </Project>
