--- a/src/Core/src/AspectCore.Core/AspectCore.Core.csproj
+++ b/src/Core/src/AspectCore.Core/AspectCore.Core.csproj
@@ -33,4 +33,8 @@
     <ProjectReference Include="..\..\..\Reflection\src\AspectCore.Extensions.Reflection\AspectCore.Extensions.Reflection.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DynamicProxy\Enhances\" />
+  </ItemGroup>
+
 </Project>
