fix : find method

--- a/NuGet.config
+++ b/NuGet.config
@@ -7,5 +7,6 @@
   </packageSources>
   <disabledPackageSources>
     <add key="AspNetVNext" value="true" />
+    <add key="AspectCoreVNext" value="true" />
   </disabledPackageSources>
 </configuration>
