--- a/reflection/src/AspectCore.Extensions.Reflection/AspectCore.Extensions.Reflection.csproj
+++ b/reflection/src/AspectCore.Extensions.Reflection/AspectCore.Extensions.Reflection.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="MethodReflector.DisplayName.cs" />
+  </ItemGroup>
+
 </Project>
