--- a/reflection/src/AspectCore.Extensions.Reflection/AspectCore.Extensions.Reflection.csproj
+++ b/reflection/src/AspectCore.Extensions.Reflection/AspectCore.Extensions.Reflection.csproj
@@ -22,4 +22,8 @@
     <None Include="MethodReflector.DisplayName.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
