--- a/aspectscope/src/AspectCore.Extensions.AspectScope/AspectCore.Extensions.AspectScope.csproj
+++ b/aspectscope/src/AspectCore.Extensions.AspectScope/AspectCore.Extensions.AspectScope.csproj
@@ -1,21 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\..\build\common.props" />
-  <Import Project="..\..\..\build\net46.props" />
   
   <PropertyGroup>
     <Description>ScopedContext extension system for AspectCore Framework.</Description>
     <AssemblyTitle>AspectCore.Extensions.ScopedContext</AssemblyTitle>
-    <TargetFrameworks>netstandard1.6;net46</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>AspectCore.Extensions.AspectScope</AssemblyName>
     <PackageId>AspectCore.Extensions.AspectScope</PackageId>
     <Title>AspectCore.Extensions.AspectScope</Title>
     <PackageTags>DynamicProxy;Aop;Aspect;AspectCore;Intercepter</PackageTags>
     <PackageReleaseNotes>ScopedContext extension system for AspectCore Framework.</PackageReleaseNotes>
   </PropertyGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\core\src\AspectCore.Core\AspectCore.Core.csproj" />
