--- a/aspectscope/src/AspectCore.Extensions.AspectScope/AspectCore.Extensions.AspectScope.csproj
+++ b/aspectscope/src/AspectCore.Extensions.AspectScope/AspectCore.Extensions.AspectScope.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\..\build\common.props" />
+  <Import Project="..\..\..\build\net45.props" />
   
   <PropertyGroup>
     <Description>ScopedContext extension system for AspectCore Framework.</Description>
     <AssemblyTitle>AspectCore.Extensions.ScopedContext</AssemblyTitle>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net45;netstandard1.6</TargetFrameworks>
     <AssemblyName>AspectCore.Extensions.AspectScope</AssemblyName>
     <PackageId>AspectCore.Extensions.AspectScope</PackageId>
     <Title>AspectCore.Extensions.AspectScope</Title>
