--- a/datavalidation/AspectCore.Extensions.DataValidation/AspectCore.Extensions.DataValidation.csproj
+++ b/datavalidation/AspectCore.Extensions.DataValidation/AspectCore.Extensions.DataValidation.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\core\src\AspectCore.Abstractions\AspectCore.Abstractions.csproj" />
+    <ProjectReference Include="..\..\reflection\src\AspectCore.Extensions.Reflection\AspectCore.Extensions.Reflection.csproj" />
+  </ItemGroup>
+
 </Project>
