--- a/datavalidation/src/AspectCore.Extensions.DataValidation/AspectCore.Extensions.DataValidation.csproj
+++ b/datavalidation/src/AspectCore.Extensions.DataValidation/AspectCore.Extensions.DataValidation.csproj
@@ -4,14 +4,18 @@
   <Import Project="..\..\..\build\net45.props" />
 
   <PropertyGroup>
-    <Description>DataAnnotations extension system for AspectCore Framework.</Description>
-    <AssemblyTitle>AspectCore.Extensions.DataAnnotations</AssemblyTitle>
+    <Description>DataValidation extension system for AspectCore Framework.</Description>
+    <AssemblyTitle>AspectCore.Extensions.DataValidation</AssemblyTitle>
     <TargetFrameworks>netstandard1.6;net45</TargetFrameworks>
-    <AssemblyName>AspectCore.Extensions.DataAnnotations</AssemblyName>
-    <PackageId>AspectCore.Extensions.DataAnnotations</PackageId>
-    <PackageTags>DataValidation;DataAnnotations;AspectCore;AOP</PackageTags>
-    <PackageReleaseNotes>DataAnnotations extension system for AspectCore Framework.</PackageReleaseNotes>
+    <AssemblyName>AspectCore.Extensions.DataValidation</AssemblyName>
+    <PackageId>AspectCore.Extensions.DataValidation</PackageId>
+    <PackageTags>DataValidation;AspectCore;AOP</PackageTags>
+    <PackageReleaseNotes>DataValidation extension system for AspectCore Framework.</PackageReleaseNotes>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.3.0" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\core\src\AspectCore.Abstractions\AspectCore.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\reflection\src\AspectCore.Extensions.Reflection\AspectCore.Extensions.Reflection.csproj" />
