add AddDataAnnotations for Asp.Net Core

--- a/extras/sample/AspectCore.Extensions.AspNetCore.Sample/Properties/launchSettings.json
+++ b/extras/sample/AspectCore.Extensions.AspNetCore.Sample/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "AspectCore.Extensions.AspNetCore.Sample": {
+    "AspNetCore.Sample": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
