--- a/extras/sample/AspectCore.Extensions.AspNetCore.Sample/AspectCore.Extensions.AspNetCore.Sample.csproj
+++ b/extras/sample/AspectCore.Extensions.AspNetCore.Sample/AspectCore.Extensions.AspNetCore.Sample.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <UserSecretsId>aspnet-AspectCore.Extensions.AspNetCore.Sample-801AA809-9522-45D6-B05D-BA4E539F156C</UserSecretsId>
+    <RootNamespace>AspNetCore.Sample</RootNamespace>
   </PropertyGroup>
 
 
