--- a/extras/sample/AspectCore.Extensions.AspNetCore.Sample/appsettings.json
+++ b/extras/sample/AspectCore.Extensions.AspNetCore.Sample/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AspectCore.Extensions.AspNetCore.Sample-801AA809-9522-45D6-B05D-BA4E539F156C;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AspNetCore.Sample-801AA809-9522-45D6-B05D-BA4E539F156C;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
