--- a/extras/src/AspectCore.Extensions.AspNetCore/AspectCore.Extensions.AspNetCore.csproj
+++ b/extras/src/AspectCore.Extensions.AspNetCore/AspectCore.Extensions.AspNetCore.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\aspectscope\src\AspectCore.Extensions.AspectScope\AspectCore.Extensions.AspectScope.csproj" />
+    <ProjectReference Include="..\..\..\datavalidation\src\AspectCore.Extensions.DataAnnotations\AspectCore.Extensions.DataAnnotations.csproj" />
     <ProjectReference Include="..\AspectCore.Extensions.DependencyInjection\AspectCore.Extensions.DependencyInjection.csproj" />
   </ItemGroup>
 
