--- a/redisprofiler/src/AspectCore.Extensions.RedisProfiler/AspectCore.Extensions.RedisProfiler.csproj
+++ b/redisprofiler/src/AspectCore.Extensions.RedisProfiler/AspectCore.Extensions.RedisProfiler.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StackExchange.Redis" Version="1.2.6" />
+    <PackageReference Include="StackExchange.Redis.StrongName" Version="1.2.6" />
   </ItemGroup>
 
   <ItemGroup>
