--- a/extras/src/AspectCore.Extensions.Hosting/AspectCore.Extensions.Hosting.csproj
+++ b/extras/src/AspectCore.Extensions.Hosting/AspectCore.Extensions.Hosting.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\core\src\AspectCore.Abstractions\AspectCore.Abstractions.csproj" />
+    <ProjectReference Include="..\..\..\core\src\AspectCore.Core\AspectCore.Core.csproj" />
     <ProjectReference Include="..\AspectCore.Extensions.DependencyInjection\AspectCore.Extensions.DependencyInjection.csproj" />
   </ItemGroup>
 
