update HostBuilder extensions

--- a/NuGet.config
+++ b/NuGet.config
@@ -1,12 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="AspNetVNext" value="https://www.myget.org/F/aspnetcidev/api/v3/index.json" />
+    <add key="AspNetVNext" value="https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json" />
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
     <add key="AspectCoreVNext" value="https://www.myget.org/F/aspectcore/api/v3/index.json" />
   </packageSources>
-  <disabledPackageSources>
-    <add key="AspNetVNext" value="true" />
-    <add key="AspectCoreVNext" value="true" />
-  </disabledPackageSources>
+  <disabledPackageSources />
 </configuration>
