--- a/core/src/AspectCore.Core/AspectCore.Core.csproj
+++ b/core/src/AspectCore.Core/AspectCore.Core.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.4.0" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.3.0" />
   </ItemGroup>
 
