--- a/src/AspectCore.Extensions.Configuration/AspectCore.Extensions.Configuration.csproj
+++ b/src/AspectCore.Extensions.Configuration/AspectCore.Extensions.Configuration.csproj
@@ -8,15 +8,21 @@
         <PackageId>AspectCore.Extensions.Configuration</PackageId>
         <PackageTags>Reflection;Aop;DynamicProxy;Configuration</PackageTags>
         <PackageReleaseNotes>Configuration extension system for ASP.NET Core via AspectCore-Framework.</PackageReleaseNotes>
-        <TargetFrameworks>netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.0;netstandard2.0</TargetFrameworks>
     </PropertyGroup>
     <ItemGroup>
       <ProjectReference Include="..\AspectCore.Abstractions\AspectCore.Abstractions.csproj" />
       <ProjectReference Include="..\AspectCore.Extensions.Reflection\AspectCore.Extensions.Reflection.csproj" />
     </ItemGroup>
-    <ItemGroup>
+
+    <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
     </ItemGroup>
 
 </Project>
