--- a/sample/AspectCore.Extensions.AspectScope.Sample/AspectCore.Extensions.AspectScope.Sample.csproj
+++ b/sample/AspectCore.Extensions.AspectScope.Sample/AspectCore.Extensions.AspectScope.Sample.csproj
@@ -3,7 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\AspectCore.Extensions.AspectScope\AspectCore.Extensions.AspectScope.csproj" />
