--- a/sample/AspectCore.Extensions.DataAnnotations.Sample/AspectCore.Extensions.DataAnnotations.Sample.csproj
+++ b/sample/AspectCore.Extensions.DataAnnotations.Sample/AspectCore.Extensions.DataAnnotations.Sample.csproj
@@ -4,7 +4,15 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <RootNamespace>DataAnnotations.Sample</RootNamespace>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\AspectCore.Extensions.DataAnnotations\AspectCore.Extensions.DataAnnotations.csproj" />
