--- a/src/AspectCore.Extensions.Windsor/AspectCore.Extensions.Windsor.csproj
+++ b/src/AspectCore.Extensions.Windsor/AspectCore.Extensions.Windsor.csproj
@@ -10,7 +10,15 @@
     <PackageTags>DynamicProxy;Aop;Windsor;AspectCore</PackageTags>
     <PackageReleaseNotes>Interceptor and dynamicProxy support for Castle.Windsor via AspectCore Framework.</PackageReleaseNotes>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Castle.Windsor" Version="4.1.0" />
