--- a/src/AspectCore.Extensions.Configuration/AspectCore.Extensions.Configuration.csproj
+++ b/src/AspectCore.Extensions.Configuration/AspectCore.Extensions.Configuration.csproj
@@ -8,7 +8,7 @@
         <PackageId>AspectCore.Extensions.Configuration</PackageId>
         <PackageTags>Reflection;Aop;DynamicProxy;Configuration</PackageTags>
         <PackageReleaseNotes>Configuration extension system for ASP.NET Core via AspectCore-Framework.</PackageReleaseNotes>
-        <TargetFrameworks>netcoreapp3.1;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>net5.0;netcoreapp3.1;netstandard2.0</TargetFrameworks>
     
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <IncludeSymbols>true</IncludeSymbols>
@@ -32,6 +32,11 @@
     <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net5.0' ">
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
